--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/andrewcoba/movie_api#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
